--- a/style/app.css
+++ b/style/app.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-* { 
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -16,4 +16,21 @@ body {
 
 a {
     color: #1e66f5;
+}
+
+pre {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    background-color: black;
+    color: greenyellow;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+@media screen and (max-width: 640px) {
+    pre {
+        width: 100%;
+    }
 }
