--- a/style/app.css
+++ b/style/app.css
@@ -29,6 +29,11 @@ pre {
     padding: 5px;
 }
 
+ol {
+    padding-left: 2em;
+    padding-right: 2em;
+}
+
 @media screen and (max-width: 640px) {
     pre {
         width: 100%;
